     using the recruit function. This makes documenting how upkeep works
     simpler (it currently wasn't really correct) without having to make
     leaders loyal. It also will work better for campaigns where the leaders
     change (not that there are any now) so that the current leader is
     exempted and any exleaders pay for upkeep (unless the are specically
     marked as loyal).
 * team color
   * allow color ranges to be defined on-the-fly (like color palettes)
   * now [side] colour=<string> is valid (previously only int)
 * miscellaneous and bug fixes
   * added a .desktop entry for the editor so that it is shown
     in the kde/gnome menu
   * rewrote the config merge routine (should improve parse time slightly)
   * various code cleanups
   * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
   * the assertion 'str.size() <= 4' no longer happens, instead the terrain
      is read as 'void' and an ingame message is shown (bug #9609)
   * IMPORTANT! End-of-scenario no longer takes you immediately to the
     next scenario or the lobby. Instead, you linger in browse mode --
     menu commands for chat, saving games, etc. are available.
	 Clicking end-of-turn ends the linger and takes you out.
   * fixed a bug-cheat allowing super-ranged attack in some special cases
     (thanks jgp93)

Version 1.3.6:
 * language and i18n:
   * updated translations: Danish, Finnish, French, German
 * multiplayer:
   * the random start ToD option is now properly saved and loaded (bug #9532)
   * the map in the lobby could be randomly invisible due to an uninitialized
     variable (bug #9555)
   * the automatic unit description used a non-MP safe way, this has been
     fixed
   * the unit name generation could with different locales call get_random()
     a different number of times. This lead to different names and traits.
     Changed to call random a fixed number of times which fixes the traits.
 * miscellaneous and bug fixes