@@ -19,6 +19,7 @@
     # Units with trait Undead cannot be drained, poisoned or plagued.
     [trait]
         id=undead
+        availability="musthave"
         male_name= _ "undead"
         female_name= _ "female^undead"
         description= _ "Immune to drain, poison and plague"
@@ -29,6 +30,7 @@
     # Units with trait Mechanical cannot be drained, poisoned or plagued.
     [trait]
         id=mechanical
+        availability="musthave"
         male_name= _ "mechanical"
         female_name= _ "female^mechanical"
         description= _ "Immune to drain, poison and plague"
